css/style.css
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}
body {
  font-size: 20px;
  font-family: "Nunito", sans-serif;
  overflow-x: hidden;
}
:root {
  --purple: #381b49;
  --purple-light: #4f2666;
  --blueStronger: #0b53be;
  --regular-gray: #555;
  --light-gray: rgb(156, 156, 156);
  --black: #202429;
}
.col,
.col-12,
.container,
.container-fluid,
.row {
  margin: 0px;
  padding: 0px;
  --bs-gutter-x: 0px;
}
main {
  margin: 0px auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* NAV */
#nav {
  display: flex;
  z-index: 10;
  background-color: var(--black);
  min-width: 100vw;
  max-width: 100vw;
  min-height: 10vh;
  max-height: 10vh;
  position: fixed;
}
.menu-icon {
  color: white;
  font-size: 40px;
  padding: 0px !important;
}
#nav > .container {
  display: flex;
  align-items: center;
  margin: 0px auto;
}
#nav .container-fluid {
  display: flex;
  justify-content: space-between;
}
.navbar-brand {
  font-weight: bold;
  font-family: "Spline Sans", sans-serif;
  font-size: 26px;
  color: white;
  margin: 0px;
}
.nav-item {
  width: 140px;
  font-weight: bold;
  display: flex;
  justify-content: center;
}
.nav-link,
.navbar-brand:visited,
.nav-link:visited {
  padding: 0px !important;
  color: white;
}
#navbarNav .nav-item:last-child {
  justify-content: flex-end;
}

/* INICIO */
#inicio {
  min-width: 100%;
  max-width: 100%;
}
#inicio > .container:first-child {
  min-width: 100%;
  min-height: 90vh;
  display: flex;
  align-items: center;
}
.landing-img {
  max-width: 75%;
}

/* BUTTONS STYLES */
.btn-style > ion-icon {
  padding-left: 10px;
  font-size: 24px;
  color: white;
}
.btn-style {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: var(--purple-light);
  width: 200px;
  height: 50px;
  border: none;
  border-radius: 4px;
}
.btn-style a,
.btn-style span {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: white;
  font-size: 20px;
}
.btn-dark {
  margin-left: 5px;
  background-color: var(--black);
}

.btn-style:hover {
  border: 2px solid dashed;
}

/* TEXT FORMAT  */
p {
  text-align: justify;
  font-size: 1.4rem;
}
h4 {
  font-size: 24px;
  color: #555;
}

/* ABOUT SECTION*/
#sobre {
  min-width: 100vw;
  min-height: 90vh;
  max-height: 90vh;
}
#sobre button span,
#inicio button span {
  padding-right: 10px;
}

/* HABILIDADES */
#habilidades {
  display: flex;
  justify-content: center;
  margin: 0px auto;
}
#habilidades button{
  background-color: var(--black);
  color: white;
}
.accordion-item {
  background-color: var(--purple-light);
}
#habilidades button i {
  padding-right: 10px;
}
.icon{
  padding: 20px 0px;
  max-width: 50px;
}
#education {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 10vh;
  min-width: 100%;
}
#education .grid p {
  font-size: 18px;
  margin-bottom: 0.2rem;
}
#current-next {
  margin: 0px auto;
  text-align: center;
}
#current-next .col-12,
#current-next .col-6 {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.accordion {
  display: flex;
  justify-content: center;
}
.progress {
  min-height: 25px;
  max-height: 25px;
}

/* UTILS */
.mw-100-percent {
  min-width: 100%;
  max-width: 100%;
}
.mw-80vw {
  min-width: 80vw;
  max-width: 80vw;
}
.rounder {
  width: 20px;
  height: 20px;
  background-color: var(--purple-light);
  border-radius: 50%;
  z-index: 20;
}
.line {
  width: 2px;
  background-color: var(--purple);
  opacity: 0.5;
  height: 100%;
  margin-left: -12px;
}
.center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.grid {
  display: grid;
  grid-template-columns: 2fr 2fr 2fr;
  grid-template-rows: minmax(100px, auto);
  min-width: 100%;
}
.with-80-percent {
  min-width: 80%;
  max-width: 80%;
}
.text-regular-gray {
  color: var(--regular-gray);
}
.text-light-gray {
  color: var(--light-gray);
}
.fade {
  transform: translateY(150px);
  opacity: 0;
  transition: all 2s ease;
}
.fade.active {
  transform: translateY(0);
  opacity: 1;
}

/* SOCIAL */
#social {
  min-height: 10vh;
  max-height: 10vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  margin: 0px auto;
  padding: 0px;
}
#social > a {
  display: flex;
  color: white;
  font-size: 35px;
  padding: 0px 10px;
}
#social > i:hover {
  cursor: pointer;
  color: var(--blueStrong-color);
}

/* PROYECTOS */
#proyectos {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 50px;
  margin: 0px auto;
}
.thumbnail {
  min-width: 100%;
  max-width: 100%;
  cursor: pointer;
  border-radius: 5px;
}
.thumbnail:hover {
  box-shadow: 1px 1px 25px #202429;
  transition: all 500ms ease;
}

/* TOP DOWN BUTTON */
#topBotButton {
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  right: 0px;
  bottom: 10vh;
  padding: 10px;
  border: none;
}
#topBotButton ion-icon {
  font-size: 48px;
  padding: 10px;
  color: var(--purple);
}
#topBotButton ion-icon:hover {
  border-radius: 50%;
  background-color: var(--purple-light);
  color: white;
}

/* FOOTER */
#footer {
  min-width: 100vw;
  max-width: 100vw;
  min-height: 10vh;
  max-height: 10vh;
  background-color: var(--black);
  margin-top: 10vh;
  z-index: 10;
}
#social {
  color: white;
}
#social ion-icon {
  font-size: 32px;
  padding: 5px;
}

/* MEDIA QUERYS */
@media (max-height: 600px) {
  section {
    margin-bottom: 5vh;
  }
  #sobre {
    min-height: 100%;
    max-height: 100%;
  }
}

@media (min-width: 320px) and (max-width: 425px) {
  .nav-link {
    font-size: 1rem;
  }
  #navbarNav .nav-item:last-child {
    justify-content: center;
  }
  p {
    font-size: 1.1rem;
  }
  #navbarNav {
    position: absolute;
    top: 10vh;
    left: 0px;
  }
  .navbar-nav {
    flex-direction: row;
    background-color: var(--purple-light);
    padding: 5px;
  }
  .navbar-brand {
    display: flex;
    align-items: center;
    font-size: 20px;
  }
  .menu-icon {
    font-size: 26px;
  }
  .nav-item {
    justify-content: center;
  }
  .btn-dark {
    margin: 10px 0px;
  }
  #sobre {
    margin-bottom: 15vh;
  }
  #topBotButton ion-icon {
    font-size: 24px;
    padding: 0px;
  }
}

@media (max-width: 576px) {
  #navbarNav {
    position: absolute;
    min-width: 100%;
    max-width: 100%;
    top: 10vh;
    right: 5vh;
  }
  .navbar-nav {
    min-width: 100%;
    max-width: 100%;
    margin: 0px auto;
  }
  #proyectos {
    grid-template-columns: 1fr;
  }
  .landing-img {
    display: none;
  }
}

@media (min-width: 577px) and (max-width: 768px) {
  #navbarNav {
    position: absolute;
    top: 10vh;
    left: 0px;
  }
  .navbar-nav {
    width: 100vw;
    flex-direction: row;
    background-color: var(--purple-light);
    justify-content: space-around;
    padding: 5px;
  }
  .nav-item {
    justify-content: space-around;
  }
  p {
    font-size: 1.2rem;
  }
  .landing-img {
    display: none;
  }
  #proyectos {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
  }
}

@media (min-width: 769px) and (max-width: 992px) {
  .navbar-nav {
    min-width: 100vw;
    max-width: 100vw;
    flex-direction: row;
    background-color: var(--black);
  }
  .landing-img {
    min-width: 100%;
  }
}

@media (min-width: 1024px) {
  .navbar-toggler {
    display: none;
  }
}

